[package]
name = "bsky-top10-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
chrono = "0.4.38"
futures = "0.3.30"
tokio-cron-scheduler = { version = "0.11.0", features = ["signal"] }
diesel = { version = "2.2.0", features = ["sqlite", "chrono", "r2d2"] }
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
r2d2 = "0.8.10"
regex = "1.10.6"
serde_with = "3.9.0"
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
